[package]
name = "cargo-djanco"
version = "0.1.0"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
syn = { version = "1.0.57", features = ["full", "extra-traits", "visit"] }
anyhow = "1.0.37"
toml = "0.5.8"
serde = "1.0.118"
quote = "1.0.9"
rustfmt = "0.10.0"