[package]
name = "cargo-djanco"
version = "0.1.0"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.17"
syn = { version = "1.0.57", features = ["full", "extra-traits", "visit"] }
anyhow = "1.0.37"
toml = "0.5.8"
serde = "1.0.118"
quote = "1.0.9"
rustfmt = "0.10.0"
unescape = "0.1.0"
regex = "1.4.5"
chrono = "0.4.19"
proc-macro2 = "1.0.24"
itertools = "0.10.0"
